Added cartIcon and cartDropdown components and implemented cart reducer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.cursorStyle": "line-thin"
+    "editor.cursorStyle": "line-thin",
+    "editor.fontFamily": "'Operator Mono', Menlo, Monaco, 'Courier New', monospace"
 }
